added task - Git Basics

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KOTTANS</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div >
+        <img class="screen" src="./images/task_Git_Basics/Introduction to Version Control  Coursera.jpg" alt="screen1" height="500px" width="500px"> 
+        <img class="screen" src="./images/task_Git_Basics/Using Git Locally  Coursera.jpg" alt="screen2" height="500px" width="500px">
+        <img class="screen"src="./images/task_Git_Basics/learnGtiBranching- main.jpg" alt="screen3" height="" width="">
+        <img class="screen"src="./images/task_Git_Basics/learnGitBranching - remote.jpg" alt="screen4" height="" width="">
+    </div>
     
 </body>
 </html>
